--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ requests==2.31.0
 uuid==1.30
 schedule==1.2.0
 psutil==6.1.0
-# 使用最新版本，支援 Python 3.13
-py-cord[speed]==2.6.1
+# 使用最新版 discord.py，已修復 Python 3.13 相容性
+discord.py==2.4.0
